# NSC_Normalized_Spectral_Clustering_C_API

./: .gitmodules  CMakeLists.txt  README.md  requirements.txt  setup.py  spkmeans.c  spkmeans.h
Google_tests/: CMakeLists.txt  basic_test.c
Google_tests/lib/: CMakeLists.txt
Google_tests/lib/docs/: advanced.md  gmock_cook_book.md  gmock_faq.md  pkgconfig.md  quickstart-cmake.md
Google_tests/lib/docs/reference/: matchers.md
Google_tests/lib/googlemock/include/gmock/: gmock-matchers.h  gmock-nice-strict.h  gmock-spec-builders.h
Google_tests/lib/googlemock/src/: gmock-spec-builders.cc
Google_tests/lib/googlemock/test/: gmock_output_test.py
src/: CMakeLists.txt  build_ext.sh  input_1.txt  main.py  run.sh  setup.py  spectralclustering.py  spkmeans.c  spkmeans.h  spkmeans.py  spkmeansmodule.c  spkmeansmodule_error.c
